--- a/templates/store.html
+++ b/templates/store.html
@@ -1,10 +1,15 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Django ecomerce PayPal</title>
+    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
 </head>
 <body>
     <h1>Store</h1>
+    <img src="{% static 'images/cart.png' %}" alt="">
+
 </body>
 </html>
