--- a/templates/cart.html
+++ b/templates/cart.html
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Django ecomerce PayPal</title>
-</head>
-<body>
-    <h1>Cart</h1>
-</body>
-</html>
+{% extends 'main.html' %}
+{% load static %}
+
+{% block content %}<h1>Cart</h1>{% endblock %}
