--- a/templates/store.html
+++ b/templates/store.html
@@ -1,15 +1,6 @@
+{% extends 'main.html' %}
 {% load static %}
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Django ecomerce PayPal</title>
-    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
-</head>
-<body>
+{% block content %}
     <h1>Store</h1>
-    <img src="{% static 'images/cart.png' %}" alt="">
-
-</body>
-</html>
+{% endblock %}
