--- a/templates/store.html
+++ b/templates/store.html
@@ -3,44 +3,21 @@
 
 {% block content %}
     <div class="row">
-        <div class="col-lg-4">
-            <img src="{% static 'images/placeholder.png' %}">
-            <div class="box-element product">
-                <h6>
-                    <strong>Product</strong>
-                    <hr>
-                </h6>
-            </div>
+        {% for product in products %}
+            <div class="col-lg-4">
+                <img src="{% static 'images/placeholder.png' %}">
+                <div class="box-element product">
+                    <h6>
+                        <strong>{{ product.name }}</strong>
+                        <hr>
+                    </h6>
+                </div>
 
-            <button class="btn btn-outline-secondary add-btn">Add to Cart</button>
-            <a class="btn btn-outline-success" href="#">View</a>
-            <h4 style="display: inline-block; float: right"><strong>$20</strong></h4>
-        </div>
-        <div class="col-lg-4">
-            <img src="{% static 'images/placeholder.png' %}">
-            <div class="box-element product">
-                <h6>
-                    <strong>Product</strong>
-                    <hr>
-                </h6>
+                <button class="btn btn-outline-secondary add-btn">Add to Cart</button>
+                <a class="btn btn-outline-success" href="#">View</a>
+                <h4 style="display: inline-block; float: right"><strong>${{ product.price | floatformat:2 }}</strong>
+                </h4>
             </div>
-
-            <button class="btn btn-outline-secondary add-btn">Add to Cart</button>
-            <a class="btn btn-outline-success" href="#">View</a>
-            <h4 style="display: inline-block; float: right"><strong>$20</strong></h4>
-        </div>
-        <div class="col-lg-4">
-            <img src="{% static 'images/placeholder.png' %}">
-            <div class="box-element product">
-                <h6>
-                    <strong>Product</strong>
-                    <hr>
-                </h6>
-            </div>
-
-            <button class="btn btn-outline-secondary add-btn">Add to Cart</button>
-            <a class="btn btn-outline-success" href="#">View</a>
-            <h4 style="display: inline-block; float: right"><strong>$20</strong></h4>
-        </div>
+        {% endfor %}
     </div>
 {% endblock %}
